--- a/staRt/package.json
+++ b/staRt/package.json
@@ -15,12 +15,9 @@
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    {
+      "locator": "../audio-plugin/"
+    }
   ],
   "cordovaPlatforms": [
     "ios"
