--- a/audio-plugin/src/ios/AudioPlugin/AudioPluginTester/Info.plist
+++ b/audio-plugin/src/ios/AudioPlugin/AudioPluginTester/Info.plist
@@ -22,6 +22,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>OTHER_LDFLAGS</key>
+	<string>-lstdc++</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
