--- a/staRt/package.json
+++ b/staRt/package.json
@@ -17,7 +17,8 @@
   "cordovaPlugins": [
     {
       "locator": "../audio-plugin/"
-    }
+    },
+    "cordova-custom-config"
   ],
   "cordovaPlatforms": [
     "ios"
