--- a/staRt/bower.json
+++ b/staRt/bower.json
@@ -6,7 +6,19 @@
     "platform": "~1.3.1"
   },
   "dependencies": {
+    "localforage": "~1.4.2",
+    "p5js": "~0.5.1",
+    "ionic": "~1.3.1",
+    "angular-localforage": "~1.2.5",
+    "ngCordova": "~0.1.26-alpha",
+    "angular": "~1.5.7"
+  },
+  "resolutions": {
     "angular-ui-router": "~0.3.0",
+    "ionic": "~1.3.1",
+    "angular": "1.4.3",
+    "angular-animate": "1.5.3",
+    "angular-sanitize": "1.5.3",
     "localforage": "~1.4.2"
   }
 }
