--- a/staRt/package.json
+++ b/staRt/package.json
@@ -12,6 +12,7 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "main-bower-files": "^2.13.1",
     "run-sequence": "^1.2.1"
   },
   "devDependencies": {
