--- a/staRt/bower.json
+++ b/staRt/bower.json
@@ -11,7 +11,8 @@
     "ionic": "~1.3.1",
     "angular-localforage": "~1.2.5",
     "ngCordova": "~0.1.26-alpha",
-    "angular": "~1.5.7"
+    "angular": "~1.5.7",
+    "three.js": "threejs#*"
   },
   "resolutions": {
     "angular-ui-router": "~0.3.0",
