Fix gulpfile to compile all project scss

--- a/staRt/ionic.project
+++ b/staRt/ionic.project
@@ -1,5 +1,13 @@
 {
   "name": "staRt",
   "app_id": "",
-  "gulpStartupTasks": ["watch", "inject"]
+  "gulpStartupTasks": [
+    "sass",
+    "watch",
+    "inject"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*"
+  ]
 }
