--- a/staRt/package.json
+++ b/staRt/package.json
@@ -13,6 +13,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
     "main-bower-files": "^2.13.1",
+    "path": "^0.12.7",
     "run-sequence": "^1.2.1"
   },
   "devDependencies": {
