Getting the basics of file uploading in place. Not 100 percent sure I'm doing it correctly, but it seems to be working on a basic level

--- a/staRt/package.json
+++ b/staRt/package.json
@@ -29,7 +29,9 @@
     {
       "locator": "../audio-plugin",
       "id": "site.girlfriends.start.audio"
-    }
+    },
+    "cordova-plugin-file",
+    "cordova-plugin-file-transfer"
   ],
   "cordovaPlatforms": [
     "ios"
