Finising uploading workflow

--- a/staRt/package.json
+++ b/staRt/package.json
@@ -31,7 +31,8 @@
       "id": "site.girlfriends.start.audio"
     },
     "cordova-plugin-file",
-    "cordova-plugin-file-transfer"
+    "cordova-plugin-file-transfer",
+    "cordova-plugin-dialogs"
   ],
   "cordovaPlatforms": [
     "ios"
