--- a/staRt/package.json
+++ b/staRt/package.json
@@ -3,22 +3,22 @@
   "version": "1.1.1",
   "description": "staRt: An Ionic project",
   "dependencies": {
-    "bower": "^1.7.9",
-    "gulp": "^3.5.6",
-    "gulp-angular-filesort": "^1.1.1",
-    "gulp-concat": "^2.2.0",
-    "gulp-connect": "^4.0.0",
-    "gulp-inject": "^4.1.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4",
-    "main-bower-files": "^2.13.1",
+    "gulp": "^3.9.1",
     "path": "^0.12.7",
     "run-sequence": "^1.2.1"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
+    "bower": "^1.8.0",
+    "cordova": "^7.0.1",
+    "gulp-angular-filesort": "^1.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^4.2.0",
+    "gulp-inject": "^4.2.0",
+    "gulp-minify-css": "^0.3.13",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-util": "^2.2.20",
+    "main-bower-files": "^2.13.1",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
