--- a/staRt/package.json
+++ b/staRt/package.json
@@ -1,40 +1,54 @@
 {
-  "name": "start",
-  "version": "1.1.1",
-  "description": "staRt: An Ionic project",
-  "dependencies": {
-    "gulp": "^3.9.1",
-    "path": "^0.12.7",
-    "run-sequence": "^1.2.1"
-  },
-  "devDependencies": {
-    "bower": "^1.8.0",
-    "cordova": "^7.0.1",
-    "gulp-angular-filesort": "^1.1.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-connect": "^4.2.0",
-    "gulp-inject": "^4.2.0",
-    "gulp-minify-css": "^0.3.13",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-util": "^2.2.20",
-    "main-bower-files": "^2.13.1",
-    "shelljs": "^0.3.0"
-  },
-  "cordovaPlugins": [
-    {
-      "locator": "../audio-plugin/"
+    "name": "start",
+    "version": "1.1.1",
+    "description": "staRt: An Ionic project",
+    "dependencies": {
+        "gulp": "^3.9.1",
+        "path": "^0.12.7",
+        "run-sequence": "^1.2.1",
+        "cordova-custom-config": "~2.0.3",
+        "cordova-plugin-dialogs": "~1.2.1",
+        "cordova-plugin-file": "~4.2.0",
+        "cordova-plugin-file-transfer": "~1.5.1",
+        "site.girlfriends.start.audio": "../audio-plugin"
     },
-    "cordova-custom-config",
-    {
-      "locator": "../audio-plugin",
-      "id": "site.girlfriends.start.audio"
+    "devDependencies": {
+        "bower": "^1.8.0",
+        "cordova": "^7.0.1",
+        "gulp-angular-filesort": "^1.1.1",
+        "gulp-concat": "^2.6.1",
+        "gulp-connect": "^4.2.0",
+        "gulp-inject": "^4.2.0",
+        "gulp-minify-css": "^0.3.13",
+        "gulp-rename": "^1.2.2",
+        "gulp-sass": "^2.3.2",
+        "gulp-util": "^2.2.20",
+        "main-bower-files": "^2.13.1",
+        "shelljs": "^0.3.0"
     },
-    "cordova-plugin-file",
-    "cordova-plugin-file-transfer",
-    "cordova-plugin-dialogs"
-  ],
-  "cordovaPlatforms": [
-    "ios"
-  ]
+    "cordovaPlugins": [
+        {
+            "locator": "../audio-plugin/"
+        },
+        "cordova-custom-config",
+        {
+            "locator": "../audio-plugin",
+            "id": "site.girlfriends.start.audio"
+        },
+        "cordova-plugin-file",
+        "cordova-plugin-file-transfer",
+        "cordova-plugin-dialogs"
+    ],
+    "cordovaPlatforms": [
+        "ios"
+    ],
+    "cordova": {
+        "plugins": {
+            "cordova-custom-config": {},
+            "cordova-plugin-dialogs": {},
+            "cordova-plugin-file": {},
+            "cordova-plugin-file-transfer": {},
+            "site.girlfriends.start.audio": {}
+        }
+    }
 }
