--- a/staRt/bower.json
+++ b/staRt/bower.json
@@ -9,12 +9,13 @@
     "localforage": "~1.4.2",
     "p5js": "~0.5.1",
     "ionic": "~1.3.1",
-    "angular-localforage": "~1.2.5",
     "ngCordova": "~0.1.26-alpha",
     "angular": "~1.5.7",
     "angular-route": "~1.3.0",
     "three.js": "threejs#*",
-    "ng-resize": "^1.2.0"
+    "ng-resize": "^1.2.0",
+    "localforage-cordovasqlitedriver": "^1.6.0",
+    "angular-localforage": "^1.3.7"
   },
   "resolutions": {
     "angular-ui-router": "~0.3.0",
