--- a/staRt/package.json
+++ b/staRt/package.json
@@ -1,54 +1,58 @@
 {
-    "name": "start",
-    "version": "1.1.1",
-    "description": "staRt: An Ionic project",
-    "dependencies": {
-        "gulp": "^3.9.1",
-        "path": "^0.12.7",
-        "run-sequence": "^1.2.1",
-        "cordova-custom-config": "~2.0.3",
-        "cordova-plugin-dialogs": "~1.2.1",
-        "cordova-plugin-file": "~4.2.0",
-        "cordova-plugin-file-transfer": "~1.5.1",
-        "site.girlfriends.start.audio": "../audio-plugin"
+  "name": "start",
+  "version": "1.1.1",
+  "description": "staRt: An Ionic project",
+  "dependencies": {
+    "audio-plugin": "file:../audio-plugin",
+    "cordova-custom-config": "~2.0.3",
+    "cordova-plugin-dialogs": "~1.2.1",
+    "cordova-plugin-file": "~4.2.0",
+    "cordova-plugin-file-transfer": "~1.5.1",
+    "cordova-sqlite-storage": "^2.1.2",
+    "gulp": "^3.9.1",
+    "localforage-cordovasqlitedriver": "^1.6.0",
+    "path": "^0.12.7",
+    "run-sequence": "^1.2.1",
+    "site.girlfriends.start.audio": "../audio-plugin"
+  },
+  "devDependencies": {
+    "bower": "^1.8.2",
+    "cordova": "^7.0.1",
+    "gulp-angular-filesort": "^1.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^4.2.0",
+    "gulp-inject": "^4.3.0",
+    "gulp-minify-css": "^0.3.13",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-util": "^2.2.20",
+    "main-bower-files": "^2.13.1",
+    "shelljs": "^0.3.0"
+  },
+  "cordovaPlugins": [
+    {
+      "locator": "../audio-plugin/"
     },
-    "devDependencies": {
-        "bower": "^1.8.0",
-        "cordova": "^7.0.1",
-        "gulp-angular-filesort": "^1.1.1",
-        "gulp-concat": "^2.6.1",
-        "gulp-connect": "^4.2.0",
-        "gulp-inject": "^4.2.0",
-        "gulp-minify-css": "^0.3.13",
-        "gulp-rename": "^1.2.2",
-        "gulp-sass": "^2.3.2",
-        "gulp-util": "^2.2.20",
-        "main-bower-files": "^2.13.1",
-        "shelljs": "^0.3.0"
+    "cordova-custom-config",
+    {
+      "locator": "../audio-plugin",
+      "id": "site.girlfriends.start.audio"
     },
-    "cordovaPlugins": [
-        {
-            "locator": "../audio-plugin/"
-        },
-        "cordova-custom-config",
-        {
-            "locator": "../audio-plugin",
-            "id": "site.girlfriends.start.audio"
-        },
-        "cordova-plugin-file",
-        "cordova-plugin-file-transfer",
-        "cordova-plugin-dialogs"
-    ],
-    "cordovaPlatforms": [
-        "ios"
-    ],
-    "cordova": {
-        "plugins": {
-            "cordova-custom-config": {},
-            "cordova-plugin-dialogs": {},
-            "cordova-plugin-file": {},
-            "cordova-plugin-file-transfer": {},
-            "site.girlfriends.start.audio": {}
-        }
+    "cordova-plugin-file",
+    "cordova-plugin-file-transfer",
+    "cordova-plugin-dialogs"
+  ],
+  "cordovaPlatforms": [
+    "ios"
+  ],
+  "cordova": {
+    "plugins": {
+      "cordova-custom-config": {},
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "site.girlfriends.start.audio": {},
+      "cordova-sqlite-storage": {}
     }
+  }
 }
