--- a/staRt/bower.json
+++ b/staRt/bower.json
@@ -15,7 +15,9 @@
     "three.js": "threejs#*",
     "ng-resize": "^1.2.0",
     "localforage-cordovasqlitedriver": "^1.6.0",
-    "angular-localforage": "^1.3.7"
+    "angular-localforage": "^1.3.7",
+    "firebase": "^4.8.1",
+    "firebaseui": "^2.5.1"
   },
   "resolutions": {
     "angular-ui-router": "~0.3.0",
