Okay, we seem to have profiles more or less working with firebase

--- a/staRt/package.json
+++ b/staRt/package.json
@@ -5,11 +5,17 @@
   "dependencies": {
     "audio-plugin": "file:../audio-plugin",
     "cordova-custom-config": "~2.0.3",
+    "cordova-ios": "~4.5.4",
+    "cordova-plugin-browsertab": "^0.2.0",
+    "cordova-plugin-buildinfo": "^2.0.1",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-dialogs": "~1.2.1",
-    "cordova-plugin-file": "~4.2.0",
-    "cordova-plugin-file-transfer": "~1.5.1",
+    "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-sqlite-storage": "^2.1.2",
+    "cordova-universal-links-plugin": "git+https://github.com/aramando/cordova-universal-links-plugin.git#35b3ed7e9a0310b12f1ac92a5159b21ce50eee57",
     "localforage-cordovasqlitedriver": "^1.6.0",
     "path": "^0.12.7",
     "run-sequence": "^1.2.1",
@@ -50,10 +56,19 @@
       "cordova-custom-config": {},
       "cordova-plugin-dialogs": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-file-transfer": {},
       "site.girlfriends.start.audio": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-device": {}
-    }
+      "cordova-plugin-device": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-buildinfo": {},
+      "cordova-plugin-browsertab": {},
+      "cordova-plugin-customurlscheme": {
+        "URL_SCHEME": "com.ionicframework.start925154"
+      },
+      "cordova-universal-links-plugin": {}
+    },
+    "platforms": [
+      "ios"
+    ]
   }
 }
