--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "audio-plugin/src/ios/TheAmazingAudioEngine"]
 	path = audio-plugin/src/ios/AudioPlugin/TheAmazingAudioEngine
-	url = git@github.com:TheAmazingAudioEngine/TheAmazingAudioEngine.git
+	url = https://github.com/TheAmazingAudioEngine/TheAmazingAudioEngine.git
