--- a/staRt/ionic.config.json
+++ b/staRt/ionic.config.json
@@ -1,7 +1,8 @@
 {
   "name": "staRt",
   "integrations": {
-    "cordova": {}
+    "cordova": {},
+    "gulp": {}
   },
   "gulpStartupTasks": [
     "sass",
