--- a/staRt/bower.json
+++ b/staRt/bower.json
@@ -25,6 +25,7 @@
     "angular": "1.4.3",
     "angular-animate": "1.5.3",
     "angular-sanitize": "1.5.3",
-    "localforage": "~1.4.2"
+    "localforage": "~1.4.2",
+    "firebase": "~5.7.0"
   }
 }
