--- a/staRt/package.json
+++ b/staRt/package.json
@@ -27,6 +27,7 @@
     "bower": "^1.8.2",
     "cordova": "^7.0.1",
     "eslint": "^5.15.1",
+    "fs-extra": "^7.0.1",
     "gulp": "^3.9.1",
     "gulp-angular-filesort": "^1.1.1",
     "gulp-concat": "^2.6.1",
@@ -37,7 +38,8 @@
     "gulp-sass": "^2.3.2",
     "gulp-util": "^2.2.20",
     "main-bower-files": "^2.13.1",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "three": "^0.103.0"
   },
   "cordovaPlugins": [
     "cordova-custom-config",
