--- a/staRt/package.json
+++ b/staRt/package.json
@@ -1,73 +1,77 @@
 {
-  "name": "start",
-  "version": "1.1.1",
-  "description": "staRt: An Ionic project",
-  "dependencies": {
-    "acorn": "^6.0.0",
-    "audio-plugin": "file:../audio-plugin",
-    "cordova-custom-config": "^5.0.2",
-    "cordova-ios": "^4.5.5",
-    "cordova-plugin-app-version": "^0.1.9",
-    "cordova-plugin-browsertab": "^0.2.0",
-    "cordova-plugin-buildinfo": "^2.0.2",
-    "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-customurlscheme": "^4.3.0",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-dialogs": "^1.3.4",
-    "cordova-plugin-file": "^5.0.0",
-    "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-sqlite-storage": "^2.5.1",
-    "cordova-universal-links-plugin-fix": "^1.2.1",
-    "localforage-cordovasqlitedriver": "^1.6.0",
-    "path": "^0.12.7",
-    "run-sequence": "^1.2.1",
-    "site.girlfriends.start.audio": "../audio-plugin"
-  },
-  "devDependencies": {
-    "bower": "^1.8.2",
-    "cordova": "^7.0.1",
-    "eslint": "^5.15.1",
-    "fs-extra": "^7.0.1",
-    "gulp": "^3.9.1",
-    "gulp-angular-filesort": "^1.1.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-connect": "^4.2.0",
-    "gulp-inject": "^4.3.0",
-    "gulp-minify-css": "^0.3.13",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-util": "^2.2.20",
-    "main-bower-files": "^2.13.1",
-    "shelljs": "^0.3.0",
-    "three": "^0.103.0"
-  },
-  "cordovaPlugins": [
-    "cordova-custom-config",
-    "cordova-plugin-file",
-    "cordova-plugin-file-transfer",
-    "cordova-plugin-dialogs"
-  ],
-  "cordovaPlatforms": [
-    "ios"
-  ],
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-dialogs": {},
-      "cordova-plugin-file": {},
-      "cordova-sqlite-storage": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-file-transfer": {},
-      "cordova-plugin-buildinfo": {},
-      "cordova-plugin-browsertab": {},
-      "cordova-plugin-customurlscheme": {
-        "URL_SCHEME": "com.ionicframework.start925154"
-      },
-      "cordova-plugin-app-version": {},
-      "cordova-custom-config": {},
-      "site.girlfriends.start.audio": {}
+    "name": "start",
+    "version": "1.1.1",
+    "description": "staRt: An Ionic project",
+    "dependencies": {
+        "acorn": "^6.0.0",
+        "audio-plugin": "file:../audio-plugin",
+        "cordova-custom-config": "^5.0.2",
+        "cordova-ios": "^4.5.5",
+        "cordova-plugin-app-version": "^0.1.9",
+        "cordova-plugin-browsertab": "^0.2.0",
+        "cordova-plugin-buildinfo": "^2.0.2",
+        "cordova-plugin-compat": "^1.2.0",
+        "cordova-plugin-customurlscheme": "^4.3.0",
+        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-dialogs": "^1.3.4",
+        "cordova-plugin-file": "^5.0.0",
+        "cordova-plugin-file-transfer": "^1.7.1",
+        "cordova-sqlite-storage": "^2.5.1",
+        "cordova-universal-links-plugin-fix": "^1.2.1",
+        "localforage-cordovasqlitedriver": "^1.6.0",
+        "path": "^0.12.7",
+        "run-sequence": "^1.2.1",
+        "site.girlfriends.start.audio": "../audio-plugin"
     },
-    "platforms": [
-      "ios"
-    ]
-  }
+    "devDependencies": {
+        "bower": "^1.8.2",
+        "braces": "^2.3.1",
+        "clean-css": "^4.1.11",
+        "cordova": "^7.0.1",
+        "eslint": "^5.15.1",
+        "fs-extra": "^7.0.1",
+        "gulp": "^3.9.1",
+        "gulp-angular-filesort": "^1.1.1",
+        "gulp-cli": "^2.1.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-connect": "^5.7.0",
+        "gulp-inject": "^4.3.0",
+        "gulp-minify-css": "^1.2.4",
+        "gulp-rename": "^1.2.2",
+        "gulp-sass": "^4.0.2",
+        "gulp-util": "^2.2.20",
+        "main-bower-files": "^2.13.1",
+        "shelljs": "^0.3.0",
+        "tar": "^4.4.2",
+        "three": "^0.103.0"
+    },
+    "cordovaPlugins": [
+        "cordova-custom-config",
+        "cordova-plugin-file",
+        "cordova-plugin-file-transfer",
+        "cordova-plugin-dialogs"
+    ],
+    "cordovaPlatforms": [
+        "ios"
+    ],
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-dialogs": {},
+            "cordova-plugin-file": {},
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-file-transfer": {},
+            "cordova-plugin-buildinfo": {},
+            "cordova-plugin-browsertab": {},
+            "cordova-plugin-customurlscheme": {
+                "URL_SCHEME": "com.ionicframework.start925154"
+            },
+            "cordova-plugin-app-version": {},
+            "cordova-custom-config": {},
+            "site.girlfriends.start.audio": {}
+        },
+        "platforms": [
+            "ios"
+        ]
+    }
 }
