Fixing the audio plugin tester to work correctly again

--- a/audio-plugin/src/ios/AudioPlugin/AudioPluginTester/Info.plist
+++ b/audio-plugin/src/ios/AudioPlugin/AudioPluginTester/Info.plist
@@ -38,6 +38,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need microphone access to test audio processing, obviously</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
